# ecs-task-doctor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/: Dockerfile  iam-policy.json  task-definition.json
ecs_doctor/: _aws.py  aggregator.py  cli.py  engine.py  models.py  streaming.py  wizard.py
ecs_doctor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ecs_doctor/diagnosers/: alb_health.py  config.py  events.py  logs.py  metrics.py  network.py  stop_reasons.py
ecs_doctor/web/: app.py
ecs_doctor/web/routes/: diagnose.py  health.py  stream.py
ecs_doctor/web/static/: app.js  style.css
ecs_doctor/web/templates/: base.html  index.html  report.html
ecs_task_doctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_alb_health.py  test_cli.py  test_config.py  test_engine.py  test_events.py  test_logs.py  test_metrics.py  test_stop_reasons.py
