[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecs-doctor"
version = "0.1.1"
description = "CLI tool to diagnose why ECS tasks and services are failing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Praveen Rajkoilraj", email = "praveenrajkoilraj@gmail.com" }
]
keywords = ["aws", "ecs", "devops", "debugging", "cli", "diagnosis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "boto3>=1.26",
  "botocore>=1.29",
  "rich>=13.0",
  "click>=8.0",
]

[project.scripts]
ecs-doctor = "ecs_doctor.cli:cli"

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "moto[ecs,elbv2,logs,sts]>=4.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecs_doctor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
