[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecs-doctor"
version = "0.3.0"
description = "CLI tool to diagnose why ECS tasks and services are failing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "Praveen Rajkoilraj", email = "praveenrajkoilraj@gmail.com" }
]
keywords = ["aws", "ecs", "devops", "debugging", "cli", "diagnosis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "boto3>=1.26",
  "botocore>=1.29",
  "rich>=13.0",
  "click>=8.0",
]

[project.scripts]
ecs-doctor = "ecs_doctor.cli:cli"

[project.optional-dependencies]
web = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
]
interactive = [
  "questionary>=2.0",
]
dev = [
  "build>=1.0",
  "moto[ecs,elbv2,logs,sts,cloudwatch,ec2]>=4.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecs_doctor*"]

[tool.setuptools.package-data]
"ecs_doctor.web" = ["static/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "ecs_doctor/web/*",
    "ecs_doctor/wizard.py",
    "ecs_doctor/streaming.py",
]
